// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`карточка нет CONSTRAINT, возвращаются правильные тексты wanted === ERROR 1`] = `
Object {
  "key": "Есть данные о нахождении в розыске",
}
`;

exports[`карточка нет CONSTRAINT, возвращаются правильные тексты wanted === OK 1`] = `
Object {
  "key": "Данные о нахождении в розыске не найдены",
}
`;

exports[`карточка нет CONSTRAINT, возвращаются правильные тексты wanted === UNKNOWN 1`] = `
Object {
  "key": "Поиск данных о нахождении в розыске",
}
`;

exports[`карточка при наличии CONSTRAINT айтем WANTED нужно удалить wanted === ERROR 1`] = `undefined`;

exports[`карточка при наличии CONSTRAINT айтем WANTED нужно удалить wanted === OK 1`] = `undefined`;

exports[`карточка при наличии CONSTRAINT айтем WANTED нужно удалить wanted === UNKNOWN 1`] = `undefined`;

exports[`полный отчет наличие CONSTRAINT не влияет на тексты wanted === ERROR 1`] = `
Object {
  "key": "Нахождение в розыске",
  "value": "Есть записи",
}
`;

exports[`полный отчет наличие CONSTRAINT не влияет на тексты wanted === OK 1`] = `
Object {
  "key": "Нахождение в розыске",
  "value": "Нет записей",
}
`;

exports[`полный отчет наличие CONSTRAINT не влияет на тексты wanted === UNKNOWN 1`] = `
Object {
  "key": "Нахождение в розыске",
  "value": "Информация появится чуть позже",
}
`;

exports[`полный отчет отстутствие CONSTRAINT не влияет на тексты wanted === ERROR 1`] = `
Object {
  "key": "Нахождение в розыске",
  "value": "Есть записи",
}
`;

exports[`полный отчет отстутствие CONSTRAINT не влияет на тексты wanted === OK 1`] = `
Object {
  "key": "Нахождение в розыске",
  "value": "Нет записей",
}
`;

exports[`полный отчет отстутствие CONSTRAINT не влияет на тексты wanted === UNKNOWN 1`] = `
Object {
  "key": "Нахождение в розыске",
  "value": "Информация появится чуть позже",
}
`;
